# plainframework1

./: .gitignore  .travis.yml  LICENSE  README.md
applications/common/include/common/: config.h  setting.h
applications/common/src/: setting.cc
applications/common/src/db/: define.cc
applications/common/src/net/: packetfactory.cc
applications/common/src/sharememory/: define.cc
applications/gateway/: CMakeLists.txt  mk_tags  replace.sh
applications/gateway/include/: gateway.h
applications/gateway/include/application/: config.h
applications/gateway/include/db/: config.h  user.h
applications/gateway/include/engine/: config.h  system.h
applications/gateway/include/message/: config.h
applications/gateway/scripts/: gateway.vc9.sln  gateway.vc9.vcproj
applications/gateway/src/: CMakeLists.txt  gateway.cc
applications/gateway/src/db/: user.cc
applications/gateway/src/engine/: system.cc
applications/gateway/src/message/delegator/: account.cc
applications/gateway/src/message/handler/gateway_tologin/: resultauth.cc
applications/gateway/src/message/handler/login_togateway/: askauth.cc  playerleave.cc  playeronline.cc
applications/gateway/src/message/handler/serverserver/: connect.cc
applications/pf_simple/: CMakeLists.txt
applications/pf_simple/scripts/: pf_simple.vc9.sln  pf_simple.vc9.vcproj
applications/pf_simple/src/: CMakeLists.txt  main.cc
documentation/css/: style.css
documentation/docs/: base.global.htm  base.hashmap.htm  base.log.htm  base.tinytimer.htm  db.odbc.htm  engine.thread.htm  event.manager.htm  license.htm  net.manager.htm  net.packet.htm  script.lua.htm  simpletutorials.htm  style-guide.htm  sys.info.htm  sys.memory.htm  sys.thread.htm  sys.util.htm  util.compressor.htm
documentation/manual/: index.htm
documentation/manual/docs/: base.macro.htm  base.string.htm  base.timemanager.htm  base.util.htm  db.manager.htm  engine.kernel.htm  file.api.htm  file.database.htm  file.ini.htm  hairstyle.txt  hostset.ini  module.htm  net.connection.htm  net.socket.htm  performance.eyes.htm  script.cache.htm  sys.process.htm
documentation/manual/js/: main.js
pf/core/: CMakeLists.txt  mk_tags  pf_core.pproject  pf_cores.pproject  replace.sh
pf/core/include/: pf.h
pf/core/proj.linux/: CMakeLists.txt
pf/core/proj.linux1/: CMakeLists.txt
pf/core/proj.win/: pf_core.rc  pf_core.sln  pf_core.vcxproj  pf_core.vcxproj.filters  resource.h
pf/core/proj.win1/: pf_cores.rc  pf_cores.sln  pf_cores.vcxproj  pf_cores.vcxproj.filters
pf/core/scripts/: pf_core.vc9.sln  pf_core.vc9.vcproj
pf/core/src/: CMakeLists.txt  CMakeLists32.txt  CMakeLists64.txt
pf/core/src/base/: define.cc  global.cc  io.cc  log.cc  md5.cc  string.cc  time_manager.cc  tinytimer.cc  util.cc
pf/core/src/base/hashmap/: integer.cc
pf/core/src/cache/: dbstore.cc  define.cc  manager.cc  repository.cc
pf/core/src/db/: define.cc  manager.cc  query.cc
pf/core/src/db/odbc/: interface.cc  system.cc
pf/core/src/engine/: kernel.cc
pf/core/src/engine/thread/: db.cc  net.cc  performance.cc  script.cc
pf/core/src/event/: system.cc
pf/core/src/file/: api.cc  database.cc  ini.cc
pf/core/src/net/: manager.cc
pf/core/src/net/connection/: base.cc  pool.cc
pf/core/src/net/connection/manager/: base.cc  epoll.cc  iocp.cc  select.cc
pf/core/src/net/packet/: base.cc  dynamic.cc  factorymanager.cc
pf/core/src/net/socket/: api.cc  base.cc  compressor.cc  encode.cc  encryptor.cc  inputstream.cc  outputstream.cc  server.cc  stream.cc
pf/core/src/performance/: eyes.cc
pf/core/src/script/cache/: base.cc  manager.cc
pf/core/src/script/lua/: filebridge.cc  interface.cc  lunar.cc  stack.cc  system.cc  vm.cc
pf/core/src/sys/: assert.cc  info.cc  minidump.cc  process.cc  thread.cc  util.cc
pf/core/src/sys/memory/: dynamic_allocator.cc  share.cc  sharemap.cc  static_allocator.cc
pf/core/src/util/: bitflag.cc  random.cc
pf/core/src/util/compressor/: assistant.cc  mini.cc  minilzo.c  minimanager.cc
pf/dependencies/iconv/: CMakeLists.txt  README.txt  iconv.pproject  mk_tags
pf/dependencies/iconv/src/: CMakeLists.txt  CMakeLists32.txt  CMakeLists64.txt  iconv.c  libiconv.rc  localcharset.c
pf/dependencies/lua/: CMakeLists.txt
pf/dependencies/lua/5.1.4/: lua.pproject
pf/dependencies/lua/5.1.4/proj.linux/: CMakeLists.txt
pf/dependencies/lua/5.1.4/proj.win/: lua.vcxproj  lua.vcxproj.filters
pf/dependencies/lua/5.1.4/scripts/: liblua.vcxproj  liblua.vcxproj.filters  lua.rc  lua.sln
pf/dependencies/lua/5.1.4/src/: CMakeLists.txt
pf/dependencies/lua/5.2.3/: lua.pproject
pf/dependencies/lua/5.2.3/proj.linux/: CMakeLists.txt
pf/dependencies/lua/5.2.3/proj.win/: lua.rc  lua.vcxproj  lua.vcxproj.filters
pf/dependencies/lua/5.3.0/: CMakeLists.txt  lua.pproject
pf/dependencies/lua/5.3.0/proj.linux/: CMakeLists.txt
pf/dependencies/lua/5.3.0/proj.win/: lua.rc  lua.vcxproj  lua.vcxproj.filters
pf/dependencies/lua/lib/ReleaseLib/: pf_lua.lib
pf/dependencies/lua/scripts/: lua.sln  lua.vcproj
pf/dependencies/lua/src/: CMakeLists.txt  CMakeLists32.txt  CMakeLists64.txt
pf/dependencies/zlib/: CMakeLists.txt  CMakeLists32.txt  CMakeLists64.txt  pf_zlib.vc9.vcproj
pf/dependencies/zlib/pf_project/: zlib.pproject
pf/dependencies/zlib/pf_project/proj.linux/: CMakeLists.txt
pf/dependencies/zlib/pf_project/proj.win/: zlib.rc  zlib.vcxproj  zlib.vcxproj.filters
pf/dependencies/zlib/pf_project/src/: CMakeLists.txt  gzlib.c  gzread.c  gzwrite.c
pf/dependencies/zlib/vc_build/: ALL_BUILD.vcproj  CTestTestfile.cmake  INSTALL.vcproj  RUN_TESTS.vcproj  ZERO_CHECK.vcproj  example.vcproj  minigzip.vcproj  pf_zlib.vc9.vcproj  zlib.pc  zlib.sln  zlib.vcproj  zlibstatic.vcproj
pf/dependencies/zlib/vc_build/Testing/Temporary/: CTestCostData.txt
pf/plugin/pak/: CMakeLists.txt  README.md  generate_pak.sh  mk_tags  plugin_pak.pproject
pf/plugin/pak/misc/: md5.h  (+3 more)
pf/plugin/pak/proj.linux/: CMakeLists.txt
pf/plugin/pak/tool/src/: CMakeLists.txt  main.cc
tools/script/bat/: rename_forvsbuild.bat
tools/script/php/: vcbuild.php
tools/script/sql/: sword_user.sql
(+223 files in other folders)
