CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT (pf_lua)

IF(CMAKE_SYSTEM MATCHES Linux)
  ADD_DEFINITIONS(-D_LIB)
  ADD_DEFINITIONS(-DLUA_USE_MKSTEMP)
  ADD_DEFINITIONS(-DLUA_COMPAT_MODULE)
ELSE(CMAKE_SYSTEM MATCHES Linux)
  ADD_DEFINITIONS(-D_USRDLL)
  ADD_DEFINITIONS(-DLUALIBDLL_EXPORTS)
  ADD_DEFINITIONS(-DLUA_COMPAT_MODULE)
ENDIF(CMAKE_SYSTEM MATCHES Linux)

INCLUDE_DIRECTORIES(src)
ADD_SUBDIRECTORY(src)
